[gd_scene load_steps=14 format=3 uid="uid://enawlhjqmymv"]

[ext_resource type="Script" path="res://UI/Runners/Runner.gd" id="1_58bsv"]
[ext_resource type="PackedScene" uid="uid://xvaoroug6jw3" path="res://UI/Ingredients/RequestIngredientButton.tscn" id="2_ivquo"]
[ext_resource type="Texture2D" uid="uid://cvdy6ysuel61i" path="res://assets/runner.png" id="2_rs5yt"]
[ext_resource type="Texture2D" uid="uid://sgcd1y64kv5b" path="res://assets/ingredients/death_petal.png" id="3_riyrb"]
[ext_resource type="Script" path="res://DataTypes/Ingredients/Ingredient.gd" id="4_sfmyx"]
[ext_resource type="Texture2D" uid="uid://dasbobr73ig1" path="res://assets/ingredients/ectoplasm.png" id="5_b6rs8"]
[ext_resource type="Texture2D" uid="uid://dj3dkfwonbkp2" path="res://assets/ingredients/fang.png" id="7_iy2el"]
[ext_resource type="Texture2D" uid="uid://b8fgndjue41ih" path="res://assets/ingredients/toxin.png" id="9_n34xk"]

[sub_resource type="LabelSettings" id="LabelSettings_i1bnh"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Resource" id="Resource_6cwh1"]
resource_local_to_scene = true
script = ExtResource("4_sfmyx")
Name = "Death Petal"
ID = 3
imgRect = "res://assets/ingredients/death_petal.png"

[sub_resource type="Resource" id="Resource_7id13"]
resource_local_to_scene = true
script = ExtResource("4_sfmyx")
Name = "Ectoplasm"
ID = 0
imgRect = "res://assets/ingredients/ectoplasm.png"

[sub_resource type="Resource" id="Resource_yp2rj"]
resource_local_to_scene = true
script = ExtResource("4_sfmyx")
Name = "Fang"
ID = 2
imgRect = "res://assets/ingredients/fang.png"

[sub_resource type="Resource" id="Resource_n1pmp"]
resource_local_to_scene = true
script = ExtResource("4_sfmyx")
Name = "Toxin"
ID = 1
imgRect = "res://assets/ingredients/toxin.png"

[node name="Runner" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_58bsv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="MissionTimerProgressBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
show_percentage = false

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ron the Runner"
label_settings = SubResource("LabelSettings_i1bnh")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_rs5yt")

[node name="MissionTimer" type="Timer" parent="."]

[node name="RequestButtonGrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 55.0
offset_top = 108.0
offset_right = 203.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 2

[node name="btnRequestDeathPetal" parent="RequestButtonGrid" instance=ExtResource("2_ivquo")]
layout_mode = 2
icon = ExtResource("3_riyrb")
ingredient = SubResource("Resource_6cwh1")

[node name="btnRequestEctoplasm" parent="RequestButtonGrid" instance=ExtResource("2_ivquo")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource("5_b6rs8")
ingredient = SubResource("Resource_7id13")

[node name="btnRequestFang" parent="RequestButtonGrid" instance=ExtResource("2_ivquo")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource("7_iy2el")
ingredient = SubResource("Resource_yp2rj")

[node name="btnRequestToxin" parent="RequestButtonGrid" instance=ExtResource("2_ivquo")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource("9_n34xk")
ingredient = SubResource("Resource_n1pmp")

[connection signal="timeout" from="MissionTimer" to="." method="_on_mission_timer_timeout"]
[connection signal="ingredient_clicked" from="RequestButtonGrid/btnRequestDeathPetal" to="." method="_on_btn_request_death_petal_ingredient_clicked"]
[connection signal="ingredient_clicked" from="RequestButtonGrid/btnRequestEctoplasm" to="." method="_on_btn_request_ectoplasm_ingredient_clicked"]
[connection signal="ingredient_clicked" from="RequestButtonGrid/btnRequestFang" to="." method="_on_btn_request_fang_ingredient_clicked"]
[connection signal="ingredient_clicked" from="RequestButtonGrid/btnRequestToxin" to="." method="_on_btn_request_toxin_ingredient_clicked"]
